Edit links to open in new window

--- a/index.html
+++ b/index.html
@@ -263,19 +263,19 @@
                     <p>ctoon14@gmail.com</p></a>
                 </div>
                 <div class="col-lg-3 text-center">
-                    <a href="https://github.com/seatuna"><i class="fa fa-github fa-3x wow bounceIn" data-wow-delay=".1s"></i>
+                    <a href="https://github.com/seatuna" target="_blank"><i class="fa fa-github fa-3x wow bounceIn" data-wow-delay=".1s"></i>
                     <p>Github</p></a>
                 </div>
                 <div class="col-lg-3 text-center">
-                    <a href="https://www.linkedin.com/in/celenatoon"><i class="fa fa-linkedin-square fa-3x wow bounceIn" data-wow-delay=".1s"></i>
+                    <a href="https://www.linkedin.com/in/celenatoon" target="_blank"><i class="fa fa-linkedin-square fa-3x wow bounceIn" data-wow-delay=".1s"></i>
                     <p>LinkedIn</p></a>
                 </div>
                 <div class="col-lg-3 text-center">
-                    <a href="https://twitter.com/seatunah"><i class="fa fa-twitter fa-3x wow bounceIn" data-wow-delay=".1s"></i>
+                    <a href="https://twitter.com/seatunah" target="_blank"><i class="fa fa-twitter fa-3x wow bounceIn" data-wow-delay=".1s"></i>
                     <p>Twitter</p></a>
                 </div>
                 <div class="col-lg-3 text-center">
-                    <a href="https://www.instagram.com/seatuna14/"><i class="fa fa-instagram fa-3x wow bounceIn" data-wow-delay=".1s"></i>
+                    <a href="https://www.instagram.com/seatuna14/" target="_blank"><i class="fa fa-instagram fa-3x wow bounceIn" data-wow-delay=".1s"></i>
                     <p>Instagram</p></a>
                 </div>
             </div>
