--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="title" content="Celena Toon's Portfolio">
+    <meta name="description" content="Web developer in search of opportunities">
+    <meta name="author" content="Celena Toon">
+    <link rel="image_src" href="img/portfolio/fish-card.jpg">
 
     <title>Celena Toon's Portfolio</title>
 
