Fix share thumbnail image

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="title" content="Celena Toon's Portfolio">
     <meta name="description" content="Web developer in search of opportunities">
     <meta name="author" content="Celena Toon">
-    <link rel="image_src" href="img/portfolio/fish-card.jpg">
+    <meta property="og:image" content="img/portfolio/fish-card.jpg">
 
     <title>Celena Toon's Portfolio</title>
 
