--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         <a class="page-scroll" href="#skills">Skills</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#portfolio">Portfolio</a>
+                        <a class="page-scroll" href="#projects">Projects</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
@@ -156,6 +156,23 @@
         </div>
     </section>
 
+    <aside class="bg-dark" id="projects">
+      <div class="row">
+          <div class="col-lg-12 text-center">
+              <h2 class="section-heading">Projects</h2>
+              <hr class="light">
+          </div>
+      </div>
+      <div class="container text-center">
+            <div class="call-to-action">
+                To view code, please visit my <a href="https://github.com/seatuna" target="_blank" class="light">GitHub</a> page!<br /><br />
+                <div class="col-lg-12 text-center">
+                    <a href="https://github.com/seatuna" target="_blank" class="light"><i class="fa fa-github fa-4x wow bounceIn" data-wow-delay=".1s"></i></a>
+                </div>
+            </div>
+        </div>
+    </aside>
+
     <section class="no-padding" id="portfolio">
         <div class="container-fluid">
             <div class="row no-gutter">
@@ -240,27 +257,19 @@
         </div>
     </section>
 
-    <aside class="bg-dark">
-        <div class="container text-center">
-            <div class="call-to-action">
-                <h2>More Projects to Come!</h2>
-            </div>
-        </div>
-    </aside>
-
     <section id="contact">
         <div class="container">
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
                     <h2 class="section-heading">Drop Me a Message!</h2>
                     <hr class="primary">
-                    <p>Please contact me for any full-time opportunities, or if you just want to say hi!</p>
+                    <p>Please contact me for any full-time opportunities, or if you just want to say hi!</p><br />
                 </div>
-                <div class="col-lg-6 text-center">
-                    <i class="fa fa-phone fa-3x wow bounceIn"></i>
-                    <p>347-804-8866</p>
+                <div class="col-lg-3 text-center">
+                    <a href="https://drive.google.com/file/d/0B35knKRAJGV0Vy1mWDVrZ2p3T2c/view?usp=sharing" target="_blank"><i class="fa fa-file-text-o fa-3x wow bounceIn"></i>
+                    <p>Resume</p></a>
                 </div>
-                <div class="col-lg-6 text-center">
+                <div class="col-lg-3 text-center">
                     <a href="mailto:ctoon14@gmail.com"><i class="fa fa-envelope-o fa-3x wow bounceIn" data-wow-delay=".1s"></i>
                     <p>ctoon14@gmail.com</p></a>
                 </div>
@@ -270,13 +279,13 @@
                 </div>
                 <div class="col-lg-3 text-center">
                     <a href="https://www.linkedin.com/in/celenatoon" target="_blank"><i class="fa fa-linkedin-square fa-3x wow bounceIn" data-wow-delay=".1s"></i>
-                    <p>LinkedIn</p></a>
+                    <p>LinkedIn</p></a><br />
                 </div>
-                <div class="col-lg-3 text-center">
+                <div class="col-lg-6 text-center">
                     <a href="https://twitter.com/seatunah" target="_blank"><i class="fa fa-twitter fa-3x wow bounceIn" data-wow-delay=".1s"></i>
                     <p>Twitter</p></a>
                 </div>
-                <div class="col-lg-3 text-center">
+                <div class="col-lg-6 text-center">
                     <a href="https://www.instagram.com/seatuna14/" target="_blank"><i class="fa fa-instagram fa-3x wow bounceIn" data-wow-delay=".1s"></i>
                     <p>Instagram</p></a>
                 </div>
