Add Vmatch and Jerebu to projects

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             <div class="row no-gutter">
                 <div class="col-lg-6 col-sm-6">
                     <a href="http://seatuna.github.io/bubble-tea-time/index.html" target="_blank" class="portfolio-box">
-                        <img src="img/portfolio/tapioca.jpg" class="img-responsive" alt="">
+                        <img src="img/portfolio/tapioca.jpg" class="img-responsive">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
@@ -197,7 +197,7 @@
                 </div>
                 <div class="col-lg-6 col-sm-6">
                     <a href="http://macaroni-squad.github.io/the-fridge-frontend/" target="_blank" class="portfolio-box">
-                        <img src="img/portfolio/fridge.jpg" class="img-responsive" alt="">
+                        <img src="img/portfolio/fridge.jpg" class="img-responsive">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
@@ -215,8 +215,27 @@
                     </a>
                 </div>
                 <div class="col-lg-6 col-sm-6">
+                    <a href="http://seatuna.github.io/vmatch-front-end/index.html" target="_blank" class="portfolio-box">
+                        <img src="img/portfolio/vmatch.jpg" class="img-responsive">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Full Stack Ember Project
+                                </div>
+                                <div class="project-name">
+                                    VMatch
+                                </div>
+                                <div class="text-faded">
+                                    A website created to keep track of Street Fighter V players in Massachusetts<br />
+                                    JavaScript, jQuery, Ruby on Rails, PostgreSQL, Ember.js
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-6 col-sm-6">
                     <a href="http://seatuna.github.io/tic-tac-toe/index.html" class="portfolio-box">
-                        <img src="img/portfolio/tic-tac-toe.jpg" target="_blank" class="img-responsive" alt="">
+                        <img src="img/portfolio/tic-tac-toe.jpg" target="_blank" class="img-responsive">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
@@ -235,7 +254,7 @@
                 </div>
                 <div class="col-lg-6 col-sm-6">
                     <a href="https://seatunacodes.wordpress.com/" class="portfolio-box">
-                        <img src="img/portfolio/seatuna.jpg" target="_blank" class="img-responsive" alt="">
+                        <img src="img/portfolio/seatuna.jpg" target="_blank" class="img-responsive">
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
@@ -251,7 +270,25 @@
                         </div>
                     </a>
                 </div>
-
+                <div class="col-lg-6 col-sm-6">
+                    <a href="http://seatuna.github.io/isac2016-jerebu/index.html" target="_blank" class="portfolio-box">
+                        <img src="img/portfolio/jerebu.jpg" class="img-responsive">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    NASA International Space Apps Challenge
+                                </div>
+                                <div class="project-name">
+                                    Jerebu
+                                </div>
+                                <div class="text-faded">
+                                    A static site created as part of the NASA International Space Apps Challenge Hackathon<br />
+                                    Bootstrap, JavaScript, jQuery
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
 
             </div>
         </div>
