Edit jerebu desc

--- a/index.html
+++ b/index.html
@@ -276,14 +276,15 @@
                         <div class="portfolio-box-caption">
                             <div class="portfolio-box-caption-content">
                                 <div class="project-category text-faded">
-                                    NASA International Space Apps Challenge
+                                    NASA International Space Apps Challenge Entry
                                 </div>
                                 <div class="project-name">
                                     Jerebu
                                 </div>
                                 <div class="text-faded">
-                                    A static site created as part of the NASA International Space Apps Challenge Hackathon<br />
-                                    Bootstrap, JavaScript, jQuery
+                                    A static site created as part of the NASA ISAC Hackathon, to raise awareness of peatland fires in<br />
+                                    Southeast Asia and advertise the mobile app for fire predictions<br />
+                                    Bootstrap, JavaScript, jQuery, Google Maps API
                                 </div>
                             </div>
                         </div>
