Edit Jerebu desc 2

--- a/index.html
+++ b/index.html
@@ -282,8 +282,7 @@
                                     Jerebu
                                 </div>
                                 <div class="text-faded">
-                                    A static site created as part of the NASA ISAC Hackathon, to raise awareness of peatland fires in<br />
-                                    Southeast Asia and advertise the mobile app for fire predictions<br />
+                                    A static site created as part of the NASA ISAC Hackathon, to raise awareness of peatland fires in Southeast Asia and advertise the mobile app for fire predictions<br />
                                     Bootstrap, JavaScript, jQuery, Google Maps API
                                 </div>
                             </div>
