--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                         <a class="page-scroll" href="#contact">Contact</a>
                     </li>
                     <li>
-                        <a href="https://drive.google.com/file/d/0B35knKRAJGV0Vy1mWDVrZ2p3T2c/view?usp=sharing" target="_blank">Resume</a>
+                        <a href="https://drive.google.com/open?id=0B35knKRAJGV0UEpfeUZmdjhMQ2M" target="_blank">Resume</a>
                     </li>
                 </ul>
             </div>
