Add js code to hit project servers

--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
                     <p>Please contact me for any full-time opportunities, or if you just want to say hi!</p><br />
                 </div>
                 <div class="col-lg-3 text-center">
-                    <a href="https://drive.google.com/file/d/0B35knKRAJGV0Vy1mWDVrZ2p3T2c/view?usp=sharing" target="_blank"><i class="fa fa-file-text-o fa-3x wow bounceIn"></i>
+                    <a href="https://drive.google.com/open?id=0B35knKRAJGV0UEpfeUZmdjhMQ2M" target="_blank"><i class="fa fa-file-text-o fa-3x wow bounceIn"></i>
                     <p>Resume</p></a>
                 </div>
                 <div class="col-lg-3 text-center">
@@ -343,6 +343,9 @@
 
     <!-- Custom Theme JavaScript -->
     <script src="js/creative.js"></script>
+
+    <!-- Wakes up project servers -->
+    <script src="js/index.js"></script>
 
 </body>
 
