--- a/index.html
+++ b/index.html
@@ -121,28 +121,28 @@
                         <p class="text-muted">JavaScript</p>
                         <p class="text-muted">HTML</p>
                         <p class="text-muted">CSS / SASS</p>
-                        <p class="text-muted">Ruby</p>
+                        <p class="text-muted">Python</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-puzzle-piece wow bounceIn text-primary" data-wow-delay=".1s"></i>
                         <h3>Libraries / Frameworks</h3>
+                        <p class="text-muted">Angular 2+</p>
+                        <p class="text-muted">Django</p>
                         <p class="text-muted">jQuery</p>
-                        <p class="text-muted">Ruby on Rails</p>
-                        <p class="text-muted">Ember.js</p>
                         <p class="text-muted">Bootstrap</p>
-                        <p class="text-muted">Express</p>
+                        <p class="text-muted">Numpy / Pandas / SkLearn</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
                     <div class="service-box">
                         <i class="fa fa-4x fa-code-fork wow bounceIn text-primary" data-wow-delay=".2s"></i>
                         <h3>Tools</h3>
-                        <p class="text-muted">Node</p>
-                        <p class="text-muted">Github</p>
+                        <p class="text-muted">Git</p>
+                        <p class="text-muted">CodeShip</p>
                         <p class="text-muted">PostgreSQL</p>
-                        <p class="text-muted">MongoDB</p>
+                        <p class="text-muted">Docker</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
