--- a/index.html
+++ b/index.html
@@ -149,7 +149,9 @@
                     <div class="service-box">
                         <i class="fa fa-4x fa-gift wow bounceIn text-primary" data-wow-delay=".3s"></i>
                         <h3>Other</h3>
-                        <p class="text-muted">CMS</p>
+                        <p class="text-muted">Wordpress</p>
+                        <p class="text-muted">Photoshop</p>
+                        <p class="text-muted">Balsamiq</p>
                     </div>
                 </div>
             </div>
