Added new projects, updated resume link

--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
                         <p class="text-muted">jQuery</p>
                         <p class="text-muted">Bootstrap</p>
                         <p class="text-muted">Numpy / Pandas / SkLearn</p>
+                        <p class="text-muted">D3</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
@@ -143,6 +144,7 @@
                         <p class="text-muted">CodeShip</p>
                         <p class="text-muted">PostgreSQL</p>
                         <p class="text-muted">Docker</p>
+                        <p class="text-muted">AWS (Lambda, S3, SageMaker)</p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-6 text-center">
@@ -179,6 +181,26 @@
         <div class="container-fluid">
             <div class="row no-gutter">
                 <div class="col-lg-6 col-sm-6">
+                    <a href="https://seatuna.github.io/us-immigration-vis/" target="_blank" class="portfolio-box">
+                        <img src="img/portfolio/d3-map.png" class="img-responsive">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Front End, Data
+                                </div>
+                                <div class="project-name">
+                                    Work in the USA: The Past Decade of US Work Visas in Numbers
+                                </div>
+                                <div class="text-faded">
+                                    Final project for Harvard Extension's Visualization class. We collected,<br />
+                                    cleaned, and visualized data on work visas from various government sources.<br />
+                                    JavaScript, D3, Python
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-6 col-sm-6">
                     <a href="http://seatuna.github.io/bubble-tea-time/index.html" target="_blank" class="portfolio-box">
                         <img src="img/portfolio/tapioca.jpg" class="img-responsive">
                         <div class="portfolio-box-caption">
@@ -192,6 +214,26 @@
                                 <div class="text-faded">
                                     A menu listing for Boston area bubble tea shops targeting those new to the drink<br />
                                     JavaScript, jQuery, Ruby on Rails, PostgreSQL
+                                </div>
+                            </div>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-6 col-sm-6">
+                    <a href="https://github.com/seatuna/ml-homicide-project" target="_blank" class="portfolio-box">
+                        <img src="img/portfolio/ml-screenshot.png" class="img-responsive">
+                        <div class="portfolio-box-caption">
+                            <div class="portfolio-box-caption-content">
+                                <div class="project-category text-faded">
+                                    Data Science Project
+                                </div>
+                                <div class="project-name">
+                                    Exploration of Homicide Data
+                                </div>
+                                <div class="text-faded">
+                                    Final project for Harvard Extension's Python for Data Science course.<br />
+                                    KNN algorithm was trained and evaluated to a publicly available homicide dataset.<br />
+                                    Python, Jupyter Notebook, Scikit-Learn, Pandas, Numpy
                                 </div>
                             </div>
                         </div>
@@ -217,25 +259,6 @@
                     </a>
                 </div>
                 <div class="col-lg-6 col-sm-6">
-                    <a href="http://seatuna.github.io/vmatch-front-end/index.html" target="_blank" class="portfolio-box">
-                        <img src="img/portfolio/vmatch.jpg" class="img-responsive">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Full Stack Ember Project
-                                </div>
-                                <div class="project-name">
-                                    VMatch
-                                </div>
-                                <div class="text-faded">
-                                    A website created to keep track of Street Fighter V players in Massachusetts<br />
-                                    JavaScript, jQuery, Ruby on Rails, PostgreSQL, Ember.js
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-6 col-sm-6">
                     <a href="http://seatuna.github.io/tic-tac-toe/index.html" class="portfolio-box">
                         <img src="img/portfolio/tic-tac-toe.jpg" target="_blank" class="img-responsive">
                         <div class="portfolio-box-caption">
@@ -249,24 +272,6 @@
                                 <div class="text-faded">
                                     A browser rendered tic-tac-toe game<br />
                                     JavaScript, jQuery
-                                </div>
-                            </div>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-lg-6 col-sm-6">
-                    <a href="https://seatunacodes.wordpress.com/" class="portfolio-box">
-                        <img src="img/portfolio/seatuna.jpg" target="_blank" class="img-responsive">
-                        <div class="portfolio-box-caption">
-                            <div class="portfolio-box-caption-content">
-                                <div class="project-category text-faded">
-                                    Wordpress Blog
-                                </div>
-                                <div class="project-name">
-                                    Seatuna Codes
-                                </div>
-                                <div class="text-faded">
-                                    A blog about my General Assembly experience as a Web Dev student
                                 </div>
                             </div>
                         </div>
@@ -305,7 +310,7 @@
                     <p>Please contact me for any full-time opportunities, or if you just want to say hi!</p><br />
                 </div>
                 <div class="col-lg-3 text-center">
-                    <a href="https://drive.google.com/open?id=0B35knKRAJGV0UEpfeUZmdjhMQ2M" target="_blank"><i class="fa fa-file-text-o fa-3x wow bounceIn"></i>
+                    <a href="https://drive.google.com/file/d/1tqaICAoCHIWjQYqhQyoxajj5qLApaxvK/view?usp=sharing" target="_blank"><i class="fa fa-file-text-o fa-3x wow bounceIn"></i>
                     <p>Resume</p></a>
                 </div>
                 <div class="col-lg-3 text-center">
