--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
           </a>
         </div>
         <div class="col-lg-6 col-sm-6">
-          <a href="http://seatuna.github.io/bubble-tea-time/index.html" target="_blank" class="portfolio-box">
+          <a href="https://github.com/seatuna/bubble-tea-time" target="_blank" class="portfolio-box">
             <img src="img/portfolio/tapioca.jpg" class="img-responsive">
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
@@ -279,7 +279,7 @@
           </a>
         </div>
         <div class="col-lg-6 col-sm-6">
-          <a href="http://seatuna.github.io/tic-tac-toe/index.html" class="portfolio-box">
+          <a href="https://github.com/seatuna/tic-tac-toe" class="portfolio-box">
             <img src="img/portfolio/tic-tac-toe.jpg" target="_blank" class="img-responsive">
             <div class="portfolio-box-caption">
               <div class="portfolio-box-caption-content">
